--- a/pylama.ini
+++ b/pylama.ini
@@ -1,4 +1,4 @@
 [pylama]
 linters=mccabe,pyflakes,pylint,isort,mypy
-ignore=C0116,W0703,R0903,C0115
+ignore=C0116,W0703,R0903,C0115,C901
 skip=.*,build/*,tests/*,*/_version.py,*/orm.py
